--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,6 @@ sqlx = { version = "0.8.3", features = [
 chrono = "0.4.40"
 uuid = { version = "1.15.1", features = ["v4"] }
 rust-embed = "8.6.0"
-futures-util = "0.3.31"
 async-stream = "0.3.6"
 bytes = "1.10.1"
+musicbrainz_rs = "0.9.0"
