--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,6 @@ uuid = { version = "1.15.1", features = ["v4"] }
 rust-embed = "8.6.0"
 async-stream = "0.3.6"
 bytes = "1.10.1"
-musicbrainz_rs = "0.9.0"
+reqwest = { version = "0.11", features = ["json"] }
+base64 = "0.21"
+serde_json = "1.0.140"
