--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,22 +4,33 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.1"
-minijinja = { version = "2.8.0", features = ["loader"] }
-minijinja-autoreload = "2.8.0"
-tokio = { version = "1.44.0", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+axum = "0.8.4"
+axum-extra = { version = "0.10.1", features = ["cookie"] }
+tower-cookies = "0.11.0"
+minijinja = { version = "2.10.2", features = ["loader"] }
+tokio = { version = "1.45.1", features = ["full"] }
 dotenvy = "0.15.7"
 serde = { version = "1.0.219", features = ["derive"] }
 sqlx = { version = "0.8.3", features = [
     "runtime-tokio-native-tls",
     "sqlite"
 ] }
-chrono = "0.4.40"
-uuid = { version = "1.15.1", features = ["v4"] }
+validator = { version = "0.20.0", features = ["derive"] }
+rustrict = "0.7.35"
+regex = "1.10"
+bcrypt = "*"
 rust-embed = "8.6.0"
 async-stream = "0.3.6"
-bytes = "1.10.1"
-reqwest = { version = "0.11", features = ["json"] }
-base64 = "0.21"
+reqwest = { version = "0.12.20", features = ["json"] }
+base64 = "0.22.1"
 serde_json = "1.0.140"
-strsim = "0.10"
+strsim = "0.11.1"
+bytes = "1.10.1"
+tower-http = {version = "0.6.6" , features = ["compression-full"]}
+time = "0.3.41"
+headers = "0.4.1"
+tokio-util = "0.7.15"
+futures = "0.3.31"
+futures-core = "0.3.31"
