--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 tokio = { version = "1.45.1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-axum = "0.8.4"
+axum = { version = "0.8.4", features = ["macros"] }
 axum-extra = { version = "0.10.1", features = ["cookie"] }
 tower-http = {version = "0.6.6" , features = ["compression-full"]}
 tower-cookies = "0.11.0"
@@ -33,7 +33,8 @@ rust-embed = "8.6.0"
 reqwest = { version = "0.12.20", features = ["json"] }
 base64 = "0.22.1"
 serde_json = "1.0.140"
-strsim = "0.11.1"
 futures = "0.3.31"
 arrayvec = "0.7.6"
 dashmap = "7.0.0-rc2"
+urlencoding = "2.1.3"
+time = { version = "0.3.41", features = ["serde"] }
