--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,6 @@ dotenvy = "0.15.7"
 serde = { version = "1.0.219", features = ["derive"] }
 validator = { version = "0.20.0", features = ["derive"] }
 rustrict = "0.7.35"
-regex = "1.10"
 bcrypt = "*"
 rust-embed = "8.6.0"
 reqwest = { version = "0.12.20", features = ["json"] }
@@ -38,3 +37,7 @@ arrayvec = "0.7.6"
 dashmap = "7.0.0-rc2"
 urlencoding = "2.1.3"
 time = { version = "0.3.41", features = ["serde"] }
+which = "8.0.0"
+tokio-util = "0.7.15"
+regex = "1.11.1"
+bytes = "1.10.1"
