--- a/.env_example
+++ b/.env_example
@@ -3,6 +3,7 @@ CACHE_DIR="runtime/cache" #requiered
 CONTACT_EMAIL="contact@example.com" #requiered
 WEBSITE_URL="127.0.0.1:8000" # will use server bind if not set
 #LOG_LEVEL="debug" # defualts to info
-HAS_SPOTIFY="false" # or false if don't want it used
+HAS_SPOTIFY="false" # or false if don't want it used not
+#if SPOTIFY_CLIENT_ID & SPOTIFY_CLIENT_SECRET are not set then HAS_SPOTIFY is false regardless
 SPOTIFY_CLIENT_ID="your_actual_client_id_here"
 SPOTIFY_CLIENT_SECRET="your_actual_client_secret_here"
