--- a/Client/package.json
+++ b/Client/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "axios": "^1.10.0",
     "bson": "^6.10.4",
+    "p-limit": "^6.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
