--- a/Client/package.json
+++ b/Client/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "debug": "ng serve --configuration development",
-    "prod": "ng build --configuration production"
+    "prod": "ng build --configuration production",
+    "build:prod": "ng build --base-href=/",
+    "deploy": "npm run build:prod && npx angular-cli-ghpages --dir=dist/Client"
   },
   "prettier": {
     "overrides": [
