--- a/Server/Cargo.toml
+++ b/Server/Cargo.toml
@@ -56,6 +56,7 @@ reqwest = { version = "0.12.20", features = ["json"] }
 base64 = "0.22.1"
 bson = { version = "2.15.0", features = ["serde_with-3"] }
 urlencoding = "2.1.3"
+rusty_ffmpeg = { version = "0.16.3", features = ["link_vcpkg_ffmpeg"] }
 
 # Async utilities
 async-trait = "0.1.88"
