Adds basic music player component
Introduces a basic music player component with a slider for progress control and an audio element.
Also, adds aot compilation to production build for better performance and restructures the main layout to accommodate the new music player component.

--- a/Client/angular.json
+++ b/Client/angular.json
@@ -30,6 +30,7 @@
           },
           "configurations": {
             "production": {
+              "aot": true,
               "budgets": [
                 {
                   "type": "initial",
