Enables PWA features, improves styling & add Music Player
Adds service worker for offline support and performance improvements.
Migrates styles to SCSS and introduces base styling.
Upgrades Angular dependencies for compatibility.

--- a/Client/angular.json
+++ b/Client/angular.json
@@ -25,7 +25,7 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ]
           },
           "configurations": {
@@ -43,7 +43,8 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
@@ -84,11 +85,16 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ]
           }
         }
       }
+    }
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "sass"
     }
   },
   "cli": {
