Enables electron app build and deployment
Adds electron build configuration.

Improves deployment process by automating browser directory copying and cleaning before deployment.

Configures client to request https and fallback to http.

we need to finish porting to electron it's a bitch

--- a/Client/angular.json
+++ b/Client/angular.json
@@ -26,7 +26,8 @@
             ],
             "styles": [
               "src/styles.scss"
-            ]
+            ],
+            "outputPath": "dist/Client"
           },
           "configurations": {
             "production": {
@@ -88,6 +89,9 @@
               "src/styles.scss"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
