--- a/Server/.env_example
+++ b/Server/.env_example
@@ -3,6 +3,12 @@ CACHE_DIR="runtime/cache" #requiered
 CONTACT_EMAIL="contact@example.com" #requiered
 WEBSITE_URL="127.0.0.1:8000" # will use server bind if not set
 #LOG_LEVEL="debug" # defualts to info
+
+# HTTPS Configuration (optional)
+#HTTPS_CERT_PATH="certs/cert.pem" # defaults to certs/cert.pem
+#HTTPS_KEY_PATH="certs/key.pem" # defaults to certs/key.pem
+#HTTPS_PORT="8443" # defaults to 8443
+
 HAS_SPOTIFY="false" # or false if don't want it used not
 #if SPOTIFY_CLIENT_ID & SPOTIFY_CLIENT_SECRET are not set then HAS_SPOTIFY is false regardless
 SPOTIFY_CLIENT_ID="your_actual_client_id_here"
