Improves server setup and music scanning
Adds an example .env file to guide users in configuring
the server and sets the LIBCLANG_PATH to a fixed value for
improved reliability.

Refactors the dependency management, upgrades libraries, and
introduces database abstraction. The music scanning process is
enhanced to use the database layer.

Implements the API specification and adds admin functions

--- a/Server/.env_example
+++ b/Server/.env_example
@@ -1,15 +1,35 @@
-SERVER_BIND="127.0.0.1:8000" #requiered
-CACHE_DIR="runtime/cache" #requiered
-CONTACT_EMAIL="contact@example.com" #requiered
+SERVER_BIND="127.0.0.1:8000" #required
+CACHE_DIR="runtime/cache" #required
+CONTACT_EMAIL="contact@example.com" #required
 WEBSITE_URL="127.0.0.1:8000" # will use server bind if not set
-#LOG_LEVEL="debug" # defualts to info
+#LOG_LEVEL="debug" # defaults to info
+
+# Database Configuration (required)
+# Options: sqlite, postgres, mongodb
+DB_BACKEND="postgres"
+
+# Database connection strings:
+# SQLite: sqlite:path/to/database.db
+# PostgreSQL: postgresql://username:password@localhost/database_name
+# MongoDB: mongodb://username:password@localhost:27017/database_name
+DATABASE_URL="postgresql://username:password@localhost/database_name"
+
+# JWT Authentication (required)
+# IMPORTANT: Change this to a secure random string in production!
+JWT_SECRET="change_this_to_a_secure_random_secret_key_at_least_32_characters_long"
+JWT_EXPIRATION_HOURS="24"  # Token expiration time in hours
 
 # HTTPS Configuration (optional)
 #HTTPS_CERT_PATH="certs/cert.pem" # defaults to certs/cert.pem
 #HTTPS_KEY_PATH="certs/key.pem" # defaults to certs/key.pem
 #HTTPS_PORT="8443" # defaults to 8443
 
-HAS_SPOTIFY="false" # or false if don't want it used not
-#if SPOTIFY_CLIENT_ID & SPOTIFY_CLIENT_SECRET are not set then HAS_SPOTIFY is false regardless
-SPOTIFY_CLIENT_ID="your_actual_client_id_here"
-SPOTIFY_CLIENT_SECRET="your_actual_client_secret_here"
+# Music Configuration
+MUSIC_DIR="runtime/music" # Directory to scan for music files (defaults to runtime/music)
+
+# Music Metadata Enrichment
+# MusicBrainz is always enabled (no configuration needed)
+# Spotify is optional and requires API credentials from https://developer.spotify.com/
+USE_SPOTIFY_API="false" # Set to true to enable Spotify metadata enrichment
+SPOTIFY_CLIENT_ID="your_spotify_client_id_here"
+SPOTIFY_CLIENT_SECRET="your_spotify_client_secret_here"
