--- a/Server/.cargo/config.toml
+++ b/Server/.cargo/config.toml
@@ -1,3 +1,3 @@
 [env]
 VCPKG_ROOT = { value = "external/vcpkg", relative = true }
-LIBCLANG_PATH = {value = "external/clang/bin", relative = true }
+LIBCLANG_PATH = { value = "/usr/lib/llvm-14/lib", relative = true }
