--- a/Server/Cargo.toml
+++ b/Server/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1.46.1", features = [
     "time",
     "process"
 ] }
+tokio-util = { version = "0.7", features = ["io"] }
 
 # Logging
 tracing = "0.1"
@@ -21,74 +22,54 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # Web framework
 axum = { version = "0.8.4", features = ["macros"] }
-axum-extra = { version = "0.10.1", features = ["typed-header"] }
 tower-http = { version = "0.6.6", features = ["compression-full","auth","cors"] }
-
-# TLS/HTTPS support
-tokio-rustls = "0.25"
-rustls = { version = "0.22" }
-rustls-pemfile = "2.1"
 
 # Database
 sqlx = { version = "0.8.3", features = [
     "runtime-tokio-native-tls",
     "sqlite",
+    "postgres",
     "uuid",
     "time"
 ] }
+mongodb = "3.3.0"
 
 # Utilities
 uuid = { version = "1.17.0", features = ["v4"] }
-id3 = { version = "1.16.3", features = ["tokio"] }
-once_cell = "1.21.3"
-async-recursion = "1.1.1"
 dotenvy = "0.15.7"
-futures = "0.3.31"
-tokio-util = "0.7.15"
-anyhow = "1.0.98"
 
 # Serialization
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = { version = "1.0.140", features = ["preserve_order"] }
-bincode = "2.0.1"
 
 # Validation and security
 validator = { version = "0.20.0", features = ["derive"] }
-rustrict = "0.7.35"
 bcrypt = "0.17.0"
-
-# HTTP client
-reqwest = { version = "0.12.20", features = ["json"] }
+jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"]}
+serde_json = "1.0.145"
 
 # Encoding and data formats
-base64 = "0.22.1"
-bson = { version = "2.15.0", features = ["serde_with-3"] }
-urlencoding = "2.1.3"
-ffmpeg-next = "7.1.0"
+bson = { version = "3.0.0", features = ["serde_with-3"] }
 
 # Async utilities
 async-trait = "0.1.88"
 
-# Data structures
-arrayvec = "0.7.6"
-
 # Time handling
 time = { version = "0.3.41", features = ["serde"] }
-
-# System utilities
-regex = "1.11.1"
-
-# Compression
-zstd = "0.13.3"
 
 # Error handling
 thiserror = "2.0.12"
 
+# Audio metadata
+lofty = "0.22"
+
+# HTTP client for external APIs
+reqwest = { version = "0.12", features = ["json"] }
+
+# URL encoding for API queries
+urlencoding = "2.1"
+
 # Image processing
-image = { version = "0.25.6", features = ["avif"] }
-rgb = "0.8"
 [target.'cfg(windows)'.dependencies]
 ravif = { version =  "0.12.0", default-features = false, features = ["threading"] }
 [target.'cfg(unix)'.dependencies]
 ravif = { version =  "0.12.0"}
-
