--- a/Client/package.json
+++ b/Client/package.json
@@ -1,48 +1,48 @@
 {
   "name": "muse",
-  "description": "An Open Source music player to connect to the muse home streaming server",
-  "author": {
-    "name": "Luke Shore",
-    "email": "publicgits.itinerary887@passmail.net"
-  },
+  "version": "0.0.1",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "main": "dist-electron/main.js",
   "scripts": {
-    "dev:react": "vite",
-    "dev:electron": "electron .",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "transpile:electron": "tsc --project src/electron/tsconfig.json",
-    "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64",
-    "dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64",
-    "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64"
-  },
-  "dependencies": {
-    "@heroui/react": "^2.8.5",
-    "@heroui/theme": "^2.4.23",
-    "@heroicons/react": "^2.1.5",
-    "framer-motion": "^11.11.14",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
-    "autoprefixer": "^10.4.20",
-    "electron": "^38.1.2",
-    "electron-builder": "^26.0.12",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.44.0",
-    "vite": "^7.1.7"
+    "@skeletonlabs/skeleton": "^2.11.0",
+    "@skeletonlabs/tw-plugin": "^0.4.1",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/eslint": "^9.6.0",
+    "@types/node": "^22.13.10",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.36.0",
+    "globals": "^15.0.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
+    "svelte": "^4.2.7",
+    "svelte-check": "^4.0.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.0.0",
+    "vite": "^5.0.3",
+    "vite-plugin-tailwind-purgecss": "^0.3.5"
+  },
+  "type": "module",
+  "dependencies": {
+    "@floating-ui/dom": "^1.6.13",
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/svelte-fontawesome": "^0.2.4",
+    "fuse.js": "^7.1.0"
   }
 }
