--- a/Client/package.json
+++ b/Client/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "muse",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
-  },
-  "devDependencies": {
-    "@skeletonlabs/skeleton": "^2.11.0",
-    "@skeletonlabs/tw-plugin": "^0.4.1",
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/eslint": "^9.6.0",
-    "@types/node": "^22.13.10",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0",
-    "globals": "^15.0.0",
-    "postcss": "^8.5.3",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.7",
-    "svelte-check": "^4.0.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.0.3",
-    "vite-plugin-tailwind-purgecss": "^0.3.5"
-  },
-  "type": "module",
-  "dependencies": {
-    "@floating-ui/dom": "^1.6.13",
-    "@fortawesome/fontawesome-free": "^7.1.0",
-    "@fortawesome/free-solid-svg-icons": "^7.1.0",
-    "@fortawesome/svelte-fontawesome": "^0.2.4",
-    "fuse.js": "^7.1.0"
-  }
+	"name": "muse",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
+	},
+	"devDependencies": {
+		"@skeletonlabs/skeleton": "^2.11.0",
+		"@skeletonlabs/tw-plugin": "^0.4.1",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/eslint": "^9.6.0",
+		"@types/node": "^22.13.10",
+		"autoprefixer": "^10.4.21",
+		"eslint": "^9.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
+		"postcss": "^8.5.3",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.7",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.17",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0",
+		"vite": "^5.0.3",
+		"vite-plugin-devtools-json": "^1.0.0",
+		"vite-plugin-tailwind-purgecss": "^0.3.5"
+	},
+	"type": "module",
+	"dependencies": {
+		"@floating-ui/dom": "^1.6.13",
+		"@fortawesome/fontawesome-free": "^7.1.0",
+		"@fortawesome/free-solid-svg-icons": "^7.1.0",
+		"@fortawesome/svelte-fontawesome": "^0.2.4",
+		"fuse.js": "^7.1.0"
+	}
 }
